--- a/todo.txt
+++ b/todo.txt
@@ -57,7 +57,7 @@ Further improvements:
 - serve():
   - done: generate and cache ETags using sha1 digest
   - done: set ETag header, check http://www.mnot.net/cache_docs/
-  - handle HTTP If-None-Match request header
-  - set response content-length header
+  - done: check If-None-Match request header and send 304 Not Modified when there is a match with current etag
+  - done: set response Content-Length header
+  - load file content if not preloaded or offloaded
 - less_css(): develop using compiler base pipelet
-
