--- a/todo.txt
+++ b/todo.txt
@@ -50,14 +50,13 @@ Further improvements:
   - handle directories and glob regexes
   - stat files
 - uglify():
+  - done: finalize sourcemaps for multiple files
   - use stat info of last file
   - store results into file for fast retrieval on no change after server restart
-  - extract compiler base pipelet to implement other compilers, providing a merge pipelet with source map
-  - separate merge and compilation in two independant pipelets
 - serve():
   - done: generate and cache ETags using sha1 digest
   - done: set ETag header, check http://www.mnot.net/cache_docs/
   - done: check If-None-Match request header and send 304 Not Modified when there is a match with current etag
   - done: set response Content-Length header
   - load file content if not preloaded or offloaded
-- less_css(): develop using compiler base pipelet
+- less_css():
